--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   http: ^1.2.1
   bulleted_list: ^0.0.1+0.1a
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
